# A5-temp

./: CMakeLists.txt  ash5.cpp  ash5.h  ash5.pro  ash5flow.cpp  ash5suite.cpp  ash5tests.cpp  configuration.cpp  configuration.h  dyn_utils.h  make-tests.py  misc_defs.h  newt_sol.h  num_jac.h  run_info.cpp  run_info.h  suite-config-2.ini  suite-config-chaotic.ini  suite-config-doubled-torus.ini  suite-config-far-attractors.ini  suite-config-fix-pt-debug.ini  suite-config-flow.ini  suite-config-ns-torus.ini
